	- updated version # in comments and added contact e-mail.
	- updated dates in change log (years were all set 2006, but this
	  was a typo for 2007)
	- fixed possible bug that would add an infinite number of
	  "//Extra data found in file:" lines from extra data detection.
	- added new test suite case with an extra command, which was generated
	  by Equipmant,


Version 1.2.3
----------------
Added 2007.08.04
	- Added the extra data feature. This feature will (hopefully) prevent
	  Equipmant from throwing out any extra data you might have in your
	  file. (i.e., Extra added Job Abilities and Spells, etc.) also any
	  comments that you add to the file will get tossed down to the bottom
	  of your output file (in the extra data segment).
	- Switched the output comments to use preprocessor macros instead of
	  typing them out directly (to make any possible changes in the future
	  quicker). These macros (EQM_OPC1 and EQM_OPC2 are stored in the
	  imp_equipmant.h file).
	- Updated the output comment line 2 (EQM_OPC2) to display the new
	  sourceforge URL also.
	- Updated hyperlink in the About UI to point to the sourceforge page.
	- Added 2 new test cases for the Extra Data feature, 5.equip and 6.equip
	  descriptions should be inside the files in the form of comments
	  describing their purpose. Load them with Equipmant and view output to
	  see how they work, then compare this output to the original file
	  contents.

Version 1.2.2
----------------
Added 2007.06.30
	- Fixed a bug in the recent file menus. When selecting the first recent
	  item, another instance of that item was added to the menu.


Version 1.2.1
----------------
Added 2007.06.30
	- Fixed a bug in the recent files menu that caused all recent files to show
	  even when there were no recent files.
	- Fixed a bug in the loadData() routine that caused path names containing
	  spaces to read in as recent files.


Version 1.2
----------------
Added 2007.06.29